--- a/index.html
+++ b/index.html
@@ -109,20 +109,18 @@
           <img src="./Coffee/about5.jpg" alt="" />
         </div>
         <div class="card-content">
+          <h2 class="card-content-title">Coffee worth to talk about.</h2>
           <div class="card-content-p">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur
-            aliquam molestiae corrupti ea facere alias saepe, tenetur architecto
-            minima hic?
+            That's why Get in. Get a coffee. Get going. Our Staff will be waiting for you there.Wanna know more about our staff?
           </div>
           <button class="btn-more">Read More</button>
         </div>
       </div>
       <div class="card-right card">
         <div class="card-content">
+          <h2 class="card-content-title">Life is short, stay awake for it.</h2>
           <div class="card-content-p">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur
-            aliquam molestiae corrupti ea facere alias saepe, tenetur architecto
-            minima hic?
+            Coffee that fuels your dreams. A neighborhood spot for people who would rather do something great today. Where coffee is art and we have the best artists to make coffee.
           </div>
           <button class="btn-more">Read More</button>
         </div>
